<resources>
    <string name="app_name">Movie</string>
    <string name="now_showing">Now Showing</string>
    <string name="see_more">See more</string>
    <string name="popular">Popular</string>
    <string name="now_showing_name_film_1">Spiderman: No Way Home</string>
    <string name="now_showing_rating_film_1">9.1/10 IMDb</string>
    <string name="now_showing_name_film_2">Eternals</string>
    <string name="now_showing_rating_film_2">9.5/10 IMDb</string>
    <string name="now_showing_name_film_3">Shang-Chi</string>
    <string name="now_showing_rating_film_3">8,1/10 IMDb</string>
    <string name="popular_name_film_1">Venom Let There Be Carnage</string>
    <string name="popular_rating_film_1">6.4/10 IMDb</string>
    <string name="detail_movie_tom_holland">Tom Holland</string>
</resources>