<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_movie"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_film_1"
        android:layout_width="match_parent"
        android:layout_height="514dp"
        android:layout_marginTop="-62dp"
        android:src="@drawable/detail_movie_film_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@drawable/button_play"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Play Trailer"
        android:textSize="12sp"
        android:fontFamily="@font/muli_semibold"
        android:textColor="#FFFFFF"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_movie_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/detail_movie_film_name"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:fontFamily="@font/mulish_extrabold"
        android:text="@string/now_showing_name_film_1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_movie_background">

    </TextView>

    <TextView
        android:id="@+id/detail_movie_film_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/muli_light"
        android:text="@string/now_showing_rating_film_1"
        android:textColor="#9C9C9C"
        android:textColorLink="#9C9C9C"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_name"
        app:layout_constraintStart_toEndOf="@id/detail_movie_film_star">

    </TextView>

    <ImageView
        android:id="@+id/detail_movie_film_star"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_name"
        app:srcCompat="@drawable/star" />

    <LinearLayout
        android:id="@+id/detail_movie_film_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_rating"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="56dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#DBE3FF"
            android:fontFamily="@font/mulish"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            android:text="Action"
            android:textAllCaps="true"
            android:textColor="#88A4E8"
            android:textSize="8sp"
            app:cornerRadius="100dp"/>

        <Button
            android:layout_width="76dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#DBE3FF"
            android:fontFamily="@font/mulish"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            android:text="Adventure"
            android:textAllCaps="true"
            android:textColor="#88A4E8"
            android:textSize="8sp"
            app:cornerRadius="100dp"/>

        <Button
            android:layout_width="62dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#DBE3FF"
            android:fontFamily="@font/mulish"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingRight="12dp"
            android:paddingBottom="4dp"
            android:text="Fantasy"
            android:textAllCaps="true"
            android:textColor="#88A4E8"
            android:textSize="8sp"
            app:cornerRadius="100dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/detail_movie_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Length"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#9C9C9C"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_genres"
        />

    <TextView
        android:id="@+id/detail_movie_length_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2h 28min"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_length"
        />

    <TextView
        android:id="@+id/detail_movie_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Language"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#9C9C9C"
        android:layout_marginStart="133dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_genres"

        />

    <TextView
        android:id="@+id/detail_movie_language_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="English"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginStart="133dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_language"
        />

    <TextView
        android:id="@+id/detail_movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rating"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#9C9C9C"
        android:layout_marginStart="242dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_film_genres"

        />

    <TextView
        android:id="@+id/detail_movie_rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PG-13"
        android:fontFamily="@font/muli_semibold"
        android:textSize="12sp"
        android:textColor="#000000"
        android:layout_marginStart="242dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_rating"
        />

    <TextView
        android:id="@+id/detail_movie_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:fontFamily="@font/merriweather_bold"
        android:textSize="16sp"
        android:textColor="#110E47"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_length_value"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_movie_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="With Spider-Man's identity now revealed, Peter asks Doctor Strange for help. When a spell goes wrong, dangerous foes from other worlds start to appear, forcing Peter to discover what it truly means to be Spider-Man."
        android:textSize="12sp"
        android:textColor="#9C9C9C"
        android:fontFamily="@font/muli_semibold"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/detail_movie_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cast"
        android:fontFamily="@font/merriweather_bold"
        android:textSize="16sp"
        android:textColor="#110E47"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/detail_movie_description_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/detail_movie_see_more"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FDF6FE"
        android:fontFamily="@font/mulish"
        android:gravity="center|top"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="4px"
        android:paddingTop="8px"
        android:paddingRight="4px"
        android:paddingBottom="8px"
        android:text="@string/see_more"
        android:textColor="#AAA9B1"
        android:textSize="10sp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_description_text"
        app:strokeColor="#AAA9B1"
        app:strokeWidth="1px" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_movie_cast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:scrollbarSize="0dp"
        android:scrollbars="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_movie_cast"
        tools:context=".MainActivity"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/item_actor">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>